# irre-tools

./: .gitignore  .gitmodules  README.md  bug_note.txt  build.docker  build.sh  meson.build
binja/: __init__.py  plugin.json  (+2 more)
src/: .gitignore  configure  dub.sdl  meson.build
src/asmr/: app.d  meson.build
src/disasm/: app.d  meson.build
src/emu/: app.d  meson.build
src/irre/: .gitignore  dub.sdl  meson.build  meta.d  sample.d  util.d
src/irre/assembler/: ast.d  ast_builder.d  ast_freezer.d  astbuilder.d  builtins.d  lexer.d  parser.d
src/irre/disassembler/: dumper.d  reader.d
src/irre/emulator/: device.d  hypervisor.d  vm.d
src/irre/emulator/devices/: ping.d  terminal.d
src/irre/encoding/: instructions.d  rega.d
src/irre/source/disassembler/: reader.d
src/irre/source/emulator/: hypervisor.d
src/irre/source/emulator/devices/: ping.d  terminal.d
src/irre/source/irre/: meta.d  util.d
src/irre/source/irre/analysis/: commit.d  ift.d  irre_arch.d  minimizer.d
src/irre/source/irre/assembler/: ast.d  ast_builder.d  ast_freezer.d  builtins.d  lexer.d  linker.d  parser.d
src/irre/source/irre/disassembler/: reader.d
src/irre/source/irre/emulator/: commit.d  device.d  hypervisor.d  vm.d
src/irre/source/irre/emulator/devices/: package.d  ping.d  random.d  terminal.d
src/irre/source/irre/encoding/: instructions.d  rega.d
src/irre/translator/: leg.d
src/irretool/: .gitignore  disasm.d  dub.sdl  dub.selections.json
src/irretool/old/: asm.d
src/irretool/source/: app.d  asm.d  emu.d  fastlog.d
src/irretool/test/: code.d  vm_basic.d
src/irretool/test/asmr/: basic.d  common.d  tests.d
src/irretool/test/emu/: common.d  test_vm.d  vm.d
src/irretool/test/ift/: common.d  test_ift.d
src/irretool/test/vm/: basic.d
src/legc/: app.d  meson.build
src/libirre/: meson.build  sample.d
src/minirre/: demo.c  irre.c  irre.h  meson.build
src/source/disasm/: app.d
(+105 files in other folders)
