project('irre-tools',
    'd'
)

asm_sources = [
    'asmr/app.d'
]
executable('irre-asm', asm_sources)

# disasm_sources = [
#     'disasm.c', 'disasm.h',
#     'asm.h',
#     'instr.h',
#     'util.h', 'buffie.h'
# ]
# executable('irre-disasm', disasm_sources)

# emu_sources = [
#     'emu.c', 'emu.h',
#     'instr.h',
#     'disasm.h',
#     'util.h', 'buffie.h'
# ]
# executable('irre-emu', emu_sources)